# example-py-project

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
example_py_project/: __init__.py  main.py
tests/: test_example_py_project.py
